--- a/index.html
+++ b/index.html
@@ -20,16 +20,42 @@
 
 
         body {
-            background-color: #020617;
+            background: radial-gradient(circle at 20% 30%, rgba(59, 130, 246, 0.12), transparent 40%),
+                radial-gradient(circle at 80% 70%, rgba(168, 85, 247, 0.10), transparent 40%),
+                #020617;
             color: #f8fafc;
             font-family: 'Plus Jakarta Sans', sans-serif;
             scroll-behavior: smooth;
+        }
+
+        body.light-mode {
+            background: #f8fafc;
+            color: #0f172a;
+        }
+
+        body.light-mode .glass {
+            background: rgba(0, 0, 0, 0.03);
+            border: 1px solid rgba(0, 0, 0, 0.08);
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.05);
+        }
+
+        body.light-mode .text-slate-300 {
+            color: #475569;
+        }
+
+        body.light-mode .text-slate-400 {
+            color: #64748b;
+        }
+
+        body.light-mode .text-slate-500 {
+            color: #94a3b8;
         }
 
         .glass {
             background: rgba(255, 255, 255, 0.03);
             backdrop-filter: blur(15px);
             border: 1px solid rgba(255, 255, 255, 0.1);
+            box-shadow: 0 10px 40px rgba(0, 0, 0, 0.25);
         }
 
         .gradient-text {
@@ -75,6 +101,7 @@
 </head>
 
 <body onload="startTimer()">
+    <canvas id="particleCanvas" class="fixed top-0 left-0 w-full h-full pointer-events-none z-[-1]"></canvas>
 
     <div id="timerContainer"
         class="fixed bottom-10 right-10 px-8 py-4 rounded-3xl flex items-center gap-4 transition-all">
@@ -101,6 +128,7 @@
             <a href="#methodology" class="hover:text-blue-400 transition">Methodology</a>
             <a href="#results" class="hover:text-blue-400 transition">Results</a>
             <a href="#team" class="hover:text-blue-400 transition">Team</a>
+            <button onclick="toggleTheme()" class="hover:text-yellow-400 transition"><i class="fas fa-sun"></i></button>
         </div>
     </nav>
 
@@ -110,11 +138,11 @@
             <div
                 class="inline-block px-4 py-1 border border-slate-800 rounded-full text-slate-500 text-[10px] font-mono mb-6 uppercase tracking-widest">
                 ID: 23FE10CSE00345</div>
-            <h1 class="text-5xl md:text-6xl font-extrabold mb-8 uppercase leading-snug"><span
+            <h1 class="text-5xl md:text-7xl lg:text-8xl font-extrabold mb-8 uppercase leading-snug"><span
                     class="gradient-text uppercase">Reliable Parkinson’s Disease Detection from EEG using Strict
                     Subject-Wise Validation</span></h1>
             <p
-                class="text-slate-400 max-w-2xl mx-auto italic text-lg leading-relaxed border-l-2 border-blue-500/30 pl-6 text-left">
+                class="text-slate-300 max-w-2xl mx-auto italic text-lg leading-relaxed border-l-2 border-blue-500/30 pl-6 text-left">
                 "Hypothesis/Project Statement: Subject-independent validation using LOSO provides realistic performance
                 estimates for EEG-based Parkinson’s detection compared to inflated subject-dependent cross-validation."
             </p>
@@ -124,8 +152,8 @@
 
         <section id="problem" class="grid md:grid-cols-2 gap-12 items-stretch">
             <div class="glass p-10 rounded-[2.5rem] flex flex-col justify-center border-l-4 border-blue-600">
-                <h2 class="text-3xl font-extrabold mb-6">Problem Statement</h2>
-                <p class="text-slate-400 leading-relaxed text-justify text-base">Most EEG-based Parkinson’s disease
+                <h2 class="text-4xl md:text-5xl font-extrabold mb-6">Problem Statement</h2>
+                <p class="text-slate-300 leading-relaxed text-justify text-base">Most EEG-based Parkinson’s disease
                     detection
                     studies report extremely high accuracy due to subject-dependent cross-validation, which causes data
                     leakage. Such evaluation strategies lead to inflated performance estimates and poor generalization
@@ -136,7 +164,7 @@
                 <div class="glass p-7 rounded-3xl border-r-4 border-blue-500/50">
                     <h3 class="text-blue-400 font-bold text-xs uppercase tracking-widest mb-2">Literature Review /
                         Market Research</h3>
-                    <p class="text-base text-slate-500 italic leading-relaxed">Recent deep learning approaches including
+                    <p class="text-base text-slate-300 italic leading-relaxed">Recent deep learning approaches including
                         CNNs, GNNs, and
                         time-frequency models report accuracies exceeding 95% using window-wise cross-validation.
                         However, studies applying strict Leave-One-Subject-Out (LOSO) validation report significantly
@@ -146,7 +174,7 @@
                 <div class="glass p-7 rounded-3xl border-r-4 border-purple-500/50">
                     <h3 class="text-purple-400 font-bold text-xs uppercase tracking-widest mb-2">Research Gap /
                         Innovation</h3>
-                    <p class="text-base text-slate-500 italic leading-relaxed">The major gap in existing research is the
+                    <p class="text-base text-slate-300 italic leading-relaxed">The major gap in existing research is the
                         lack of strict
                         subject-level validation. Most studies optimize architectural complexity while ignoring
                         validation rigor. Our work emphasizes methodological discipline using Leave-One-Subject-Out
@@ -158,7 +186,7 @@
         <div class="h-[1px] bg-white/10 my-16"></div>
 
         <section id="methodology" class="space-y-12">
-            <h2 class="text-4xl font-black text-center uppercase tracking-tight">System <span
+            <h2 class="text-4xl md:text-5xl font-black text-center uppercase tracking-tight">System <span
                     class="text-blue-500">Methodology</span></h2>
             <div class="grid md:grid-cols-3 gap-8">
                 <div class="glass p-8 rounded-3xl text-center">
@@ -189,7 +217,7 @@
         <div class="h-[1px] bg-white/10 my-16"></div>
 
         <section id="pipeline" class="space-y-16 text-center">
-            <h2 class="text-4xl font-black uppercase tracking-tight">
+            <h2 class="text-4xl md:text-5xl font-black uppercase tracking-tight">
                 Research <span class="text-blue-500">Workflow</span>
             </h2>
 
@@ -255,7 +283,7 @@
         <div class="h-[1px] bg-white/10 my-16"></div>
 
         <section id="results" class="glass p-12 rounded-[3.5rem]">
-            <h2 class="text-3xl font-black mb-2 text-center uppercase tracking-tight">Results & <span
+            <h2 class="text-4xl md:text-5xl font-black mb-2 text-center uppercase tracking-tight">Results & <span
                     class="text-blue-500">Analysis</span></h2>
             <p class="text-center text-slate-500 text-xs font-medium uppercase tracking-widest mb-12 opacity-80">
                 Validated using strict Leave-One-Subject-Out cross-validation on 31 subjects</p>
@@ -271,33 +299,33 @@
                     <div class="grid grid-cols-2 md:grid-cols-2 gap-4 mt-8 md:mt-12 text-center">
 
                         <div data-aos="fade-up"
-                            class="glass p-3 md:p-6 rounded-2xl border-t-4 border-blue-500 hover:scale-105 transition-transform duration-300 min-w-0">
+                            class="glass p-3 md:p-6 rounded-2xl border-t-4 border-blue-500 hover:scale-105 transition-transform duration-300 min-w-0 hover:shadow-[0_0_25px_rgba(59,130,246,0.4)]">
                             <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-widest mb-1">
                                 Balanced Accuracy</p>
-                            <h3 class="text-3xl md:text-4xl font-black text-blue-400 counter" data-target="74.58">0</h3>
+                            <h3 class="text-4xl md:text-5xl font-black text-blue-400 counter" data-target="74.58">0</h3>
                         </div>
 
                         <div data-aos="fade-up" data-aos-delay="100"
-                            class="glass p-3 md:p-6 rounded-2xl border-t-4 border-purple-500 hover:scale-105 transition-transform duration-300 min-w-0">
+                            class="glass p-3 md:p-6 rounded-2xl border-t-4 border-purple-500 hover:scale-105 transition-transform duration-300 min-w-0 hover:shadow-[0_0_25px_rgba(168,85,247,0.4)]">
                             <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-widest mb-1">AUC
                             </p>
-                            <h3 class="text-3xl md:text-4xl font-black text-purple-400 counter" data-target="78.75">0
+                            <h3 class="text-4xl md:text-5xl font-black text-purple-400 counter" data-target="78.75">0
                             </h3>
                         </div>
 
                         <div data-aos="fade-up" data-aos-delay="200"
-                            class="glass p-3 md:p-6 rounded-2xl border-t-4 border-green-500 hover:scale-105 transition-transform duration-300 min-w-0">
+                            class="glass p-3 md:p-6 rounded-2xl border-t-4 border-green-500 hover:scale-105 transition-transform duration-300 min-w-0 hover:shadow-[0_0_25px_rgba(34,197,94,0.4)]">
                             <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-widest mb-1">
                                 Sensitivity</p>
-                            <h3 class="text-3xl md:text-4xl font-black text-green-400 counter" data-target="86.67">0
+                            <h3 class="text-4xl md:text-5xl font-black text-green-400 counter" data-target="86.67">0
                             </h3>
                         </div>
 
                         <div data-aos="fade-up" data-aos-delay="300"
-                            class="glass p-3 md:p-6 rounded-2xl border-t-4 border-red-500 hover:scale-105 transition-transform duration-300 min-w-0">
+                            class="glass p-3 md:p-6 rounded-2xl border-t-4 border-red-500 hover:scale-105 transition-transform duration-300 min-w-0 hover:shadow-[0_0_25px_rgba(239,68,68,0.4)]">
                             <p class="text-slate-400 text-[10px] md:text-xs uppercase tracking-widest mb-1">
                                 Specificity</p>
-                            <h3 class="text-3xl md:text-4xl font-black text-red-400 counter" data-target="62.5">0</h3>
+                            <h3 class="text-4xl md:text-5xl font-black text-red-400 counter" data-target="62.5">0</h3>
                         </div>
 
                     </div>
@@ -426,6 +454,73 @@
                     x: { grid: { display: false }, ticks: { color: '#475569' } }
                 }
             }
+        });
+    </script>
+    <script>
+        // TOGGLE THEME
+        function toggleTheme() {
+            document.body.classList.toggle('light-mode');
+            const icon = document.querySelector('button i');
+            if (document.body.classList.contains('light-mode')) {
+                icon.classList.replace('fa-sun', 'fa-moon');
+            } else {
+                icon.classList.replace('fa-moon', 'fa-sun');
+            }
+        }
+
+        // PERTICLE BACKGROUND
+        const canvas = document.getElementById('particleCanvas');
+        const ctxCanvas = canvas.getContext('2d');
+        let particlesArray;
+
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+
+        class Particle {
+            constructor() {
+                this.x = Math.random() * canvas.width;
+                this.y = Math.random() * canvas.height;
+                this.size = Math.random() * 2;
+                this.speedX = (Math.random() * 0.2) - 0.1;
+                this.speedY = (Math.random() * 0.2) - 0.1;
+            }
+            update() {
+                this.x += this.speedX;
+                this.y += this.speedY;
+                if (this.x < 0 || this.x > canvas.width) this.speedX *= -1;
+                if (this.y < 0 || this.y > canvas.height) this.speedY *= -1;
+            }
+            draw() {
+                ctxCanvas.fillStyle = 'rgba(255, 255, 255, 0.05)';
+                ctxCanvas.beginPath();
+                ctxCanvas.arc(this.x, this.y, this.size, 0, Math.PI * 2);
+                ctxCanvas.fill();
+            }
+        }
+
+        function initParticles() {
+            particlesArray = [];
+            for (let i = 0; i < 40; i++) {
+                particlesArray.push(new Particle());
+            }
+        }
+
+        function animateParticles() {
+            ctxCanvas.clearRect(0, 0, canvas.width, canvas.height);
+            for (let i = 0; i < particlesArray.length; i++) {
+                particlesArray[i].update();
+                particlesArray[i].draw();
+            }
+            requestAnimationFrame(animateParticles);
+        }
+
+        initParticles();
+        animateParticles();
+
+        window.addEventListener('resize', () => {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+            initParticles();
         });
     </script>
 </body>
